# sandbox

./: CMakeLists.txt  README.md
config/: default.json  sample.json
docs/: API.md
scripts/: install_deps.sh
src/: main.cpp
src/core/: ConfigParser.cpp  ConfigParser.h  Logger.cpp  Logger.h  SandboxManager.cpp  SandboxManager.h
src/modules/ai/: AIAgent.cpp  AIAgent.h
src/modules/filesystem/: Mounts.cpp  Mounts.h  RootFS.cpp  RootFS.h
src/modules/interface/: IModule.cpp  IModule.h
src/modules/isolation/: Cgroups.cpp  Cgroups.h  Namespaces.cpp  Namespaces.h
src/modules/security/: Caps.cpp  Caps.h  Seccomp.cpp  Seccomp.h
src/utils/: Syscalls.cpp  Syscalls.h
tests/: CMakeLists.txt  config_parser_test.cpp  module_test.cpp  test_main.cpp
